--- a/Projeto 3 - TecBlog/index.html
+++ b/Projeto 3 - TecBlog/index.html
@@ -27,6 +27,28 @@
                 <a href="http://">Eletrônicos</a>
             </div>
         </div>
+        <div id="principal">
+            <div id="postagens">
+                <h2>Postagens</h2>
+                <div id="postagem">
+                    <div id="postagem-feed">
+                        <h3>Título: Mussum Ipsum</h3>
+                        <span>08 Junho 202x</span>
+                        <img class="imagem-postagem" src="./imagens/imagem1.jpg">
+                        <p>
+                            Mussum Ipsum, cacilds vidis litro abertis. Diuretics paradis num copo é motivis de denguis. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Copo furadis é disculpa de bebadis, arcu quam euismod magna. Quem num gosta di mim que vai caçá sua turmis!
+                        </p>
+                    </div>
+                    <a href="">Clique para saber mais</a>
+                </div>
+            </div>
+            <div id="barra-lateral">
+                barra lateral
+            </div>
+            <div id="rodape">
+                rodape
+            </div>
+        </div>
         <script src="" async defer></script>
     </body>
 </html>
