Feed de postagens

--- a/Projeto 3 - TecBlog/index.html
+++ b/Projeto 3 - TecBlog/index.html
@@ -30,16 +30,35 @@
         <div id="principal">
             <div id="postagens">
                 <h2>Postagens</h2>
-                <div id="postagem">
-                    <div id="postagem-feed">
-                        <h3>Título: Mussum Ipsum</h3>
-                        <span>08 Junho 202x</span>
+                <div class="postagem">
+                    <div class="postagem-feed">
+                        <div class="cabecalho-postagem-feed">
+                            <h3> <span class="titulo-postagem-feed">Título:</span> Mussum Ipsum</h3>
+                            <span>08 Junho 202x</span>
+                        </div>
                         <img class="imagem-postagem" src="./imagens/imagem1.jpg">
-                        <p>
-                            Mussum Ipsum, cacilds vidis litro abertis. Diuretics paradis num copo é motivis de denguis. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Copo furadis é disculpa de bebadis, arcu quam euismod magna. Quem num gosta di mim que vai caçá sua turmis!
-                        </p>
+                        <div class="corpo-postagem-feed">
+                            <p >
+                                Mussum Ipsum, cacilds vidis litro abertis. Diuretics paradis num copo é motivis de denguis. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Copo furadis é disculpa de bebadis, arcu quam euismod magna. Quem num gosta di mim que vai caçá sua turmis!
+                            </p>
+                            <a href="">Saiba mais</a>
+                        </div>
                     </div>
-                    <a href="">Clique para saber mais</a>
+                </div>
+                <div class="postagem">
+                    <div class="postagem-feed">
+                        <div class="cabecalho-postagem-feed">
+                            <h3> <span class="titulo-postagem-feed">Título:</span> Mussum Ipsum</h3>
+                            <span>08 Junho 202x</span>
+                        </div>
+                        <img class="imagem-postagem" src="./imagens/imagem1.jpg">
+                        <div class="corpo-postagem-feed">
+                            <p >
+                                Mussum Ipsum, cacilds vidis litro abertis. Diuretics paradis num copo é motivis de denguis. Admodum accumsan disputationi eu sit. Vide electram sadipscing et per. Copo furadis é disculpa de bebadis, arcu quam euismod magna. Quem num gosta di mim que vai caçá sua turmis!
+                            </p>
+                            <a href="">Saiba mais</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="barra-lateral">
