--- a/DIO - HTML Web Developer/Interface Netflix/index.html
+++ b/DIO - HTML Web Developer/Interface Netflix/index.html
@@ -1,28 +1,100 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style/main.css" />
+    <link rel="stylesheet" href="style/responsive.css">
+    <link rel="stylesheet" href="style/owl/owl.carousel.css" />
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css" />
     <title>Netflex</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="container">
-            <h2 class="logoNetflex">NETFLEX</h2>
-            <nav>
-                <a href="">Início</a>
-                <a href="">Séries</a>
-                <a href="">Filmes</a>
-                <a href="">Documentários</a>
-                <a href="">Animações</a>
-                <a href="">Minha Lista</a>
-            </nav>
-        </div>
+      <div class="container">
+        <h2 class="logoNetflex">FLEX-PRIMENET ON-LINE +</h2>
+        <nav>
+          <a href="">Início</a>
+          <a href="">Séries</a>
+          <a href="">Filmes</a>
+          <a href="">Documentários</a>
+          <a href="">Animações</a>
+          <a href="">Minha Lista</a>
+        </nav>
+      </div>
     </header>
     <main>
-        <div class="splashImage"></div>
+      <div class="splashImage">
+        <div class="container">
+          <h3 class="contentTitle">SCISSOR SEVEN</h3>
+          <article class="splashDescription">
+            Em busca de dinheiro para tratar a amnésia, Seven tenta a sorte no
+            competitivo mundo dos assassinos de aluguel. Mas será que ele tem
+            vocação para o crime?
+          </article>
+          <div class="buttons">
+            <button class="watchButton btn" role="button">
+              <ion-icon name="play-outline" size="large"></ion-icon>
+              ASSISTIR AGORA
+            </button>
+            <button class="btn btnInfo" role="button">
+              <ion-icon
+                name="information-circle-outline"
+                size="large"
+              ></ion-icon>
+              INFORMAÇÕES
+            </button>
+          </div>
+        </div>
+      </div>
     </main>
-</body>
+    <section class="contentCarrosseul">
+      <div class="owl-carousel owl-theme">
+        <div class="item">
+          <img src="resources/1lk7QISmTam2iOzzUAQYs6voeFg.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="resources/gBrsCTmOBggTzJkTfBMfx1z8Z6T.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="resources/hgnnUSkKuEpXfs0IpTu5uCsdcKx.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="resources/klAIFewuqcyEmH1SMtR2XbMyqzM.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="resources/nLdGhMTqdvWgMuxmSroaV2JX8sX.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="resources/qa3AiqnnZXVPQcYX1GzrFyh9l9.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="resources/y050bT6tpkBdJJqRQb6nCBqHDv3.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="resources/ppiumCPMB9ezt4oLcpKtSS5E82X.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="resources/lqS90fU1IEHSbga7X6Gej5amBvR.jpg" alt="" />
+        </div>
+        <div class="item">
+          <img src="resources/bpKYMRKNJoDY3swRNQ3qahSAdr2.jpg" alt="" />
+        </div>
+      </div>
+    </section>
+    <!-- script owl carousel -->
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/main.js"></script>
+    <!-- Script ion icons -->
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
